ui: linux: stop the slight cropping of text in the left pane tabs
(integrated from komodo (trunk) change 68566 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@9430 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/gnome/tabs/verticaltabs.css
+++ b/src/chrome/komodo/skin/plat/gnome/tabs/verticaltabs.css
@@ -20,7 +20,7 @@ ko-pane[type="vertical"] tabs[anonid="tabs"] tab
 ko-pane[type="vertical"] tabs[anonid="tabs"][rotation="270"] tab
 {
     /* This has the affect of centering the tab labels. */
-    padding-left        : 5px;
+    padding-left        : 6px;
 }
 
 ko-pane[type="vertical"] tab[selected="true"]
